# UDPtransfer

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
src/: connection_properties.rs  lib.rs  loggable.rs  packet.rs  socket_manipulation.rs  transferable.rs
src/broker/: broker.rs  config.rs  logic.rs  main.rs  mod.rs  packet_wrapper.rs
src/packet/: checksum.rs  data_packet.rs  end_packet.rs  enums.rs  error_packet.rs  init_packet.rs  mod.rs  packet.rs  packet_header.rs
src/receiver/: config.rs  logic.rs  main.rs  mod.rs  receiver_connection_properties.rs
src/sender/: config.rs  logic.rs  main.rs  mod.rs  sender_connection_properties.rs
tests/: big_file.rs  direct_send.rs  everything.rs  forced_smaller_size.rs  more_senders.rs  passthrough.rs  smaller_packet_size.rs  smaller_window.rs  with_change.rs  with_delay.rs  with_drop.rs  with_forced_change.rs
