[package]
name = "guess_game"
version = "0.1.0"
authors = ["Patrik Valkovic <patrik.valkovic@hotmail.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
argparse = "0.2.2"

[[bin]]
name="receiver"
path="src/receiver/main.rs"

[[bin]]
name="sender"
path="src/sender/main.rs"
